# Django-crud

./: db.sqlite3  pyproject.toml
