[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["talahajeer <tala.hajeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
